add comment from Shiaki-san

--- a/0_Abstract.tex
+++ b/0_Abstract.tex
@@ -1,4 +1,13 @@
 \section*{Abstract}
-The masses of hadrons can be theoretically explained by the spontaneous breaking of chiral symmetry. Experimentally, the quark-gluon plasma (QGP) produced in heavy-ion collisions is expected to create a medium characterized by extremely high temperatures and densities. In such a medium, the quark condensate, which serves as the order parameter of chiral symmetry, is predicted to approach zero. It may potentially lead to changes in the masses of hadrons within the QGP. Light vector mesons ($\rho, \omega, \phi$) are  probes for investigating the mass moidification of hadrons within the QGP. These mesons decay into lepton pairs that do not interact strong interaction with the QGP, and their relatively short lifetimes make them likely to decay within the QGP at low transverse momentum. Consequently, measuring lepton pairs provides a means to observe the mass distributions of light vector mesons, modified by the QGP.However, despite efforts to explore the chiral symmetry restoration through various experiments. The phenomenon has yet to be clearly established due to challenges such as statistical limitations, resolution, and contributions from heavy flavors. To address these challenges, I aim to investigate the transverse momentum dependence of light vector meson mass distribution in Pb+Pb collisions by measuring muon pairs using ALCE. The ALICE detectors are specialized studying QGP.Using muon pairs has the advantage of providing a better S/N ratio compared to electron pairs, as it avoids background processes like $\pi^0$ Dalitz decays and $\gamma$ conversions. Additionally, a new silicon detector, the Muon Forward Tracker (MFT), was introduced in the forward region of ALICE during the LHC Run 3. This detector enables precise measurements of muon production points and improves the detection of muons at lower transverse momentum. By accurately measuring muon production points, it becomes possible to exclude muons originating from heavy flavor decays, further enhancing mass resolution. This study aims to use the improved mass resolution and reduced background to explore the changes in light vector meson masses with minimal background at low transverse momentum by excluding heavy-flavor contributions and measuring muon pairs more precisely.
+The masses of hadrons can be theoretically explained by the spontaneous breaking of chiral symmetry. Experimentally, the quark-gluon plasma (QGP) produced in heavy-ion collisions is expected to create a medium characterized by extremely high temperatures and densities. In such a medium, the quark condensate, which serves as the order parameter of chiral symmetry, is predicted to approach zero. It may potentially lead to changes in the masses of hadrons within the QGP.
+\KS{You need a proper spacing after a sentence ending with a capital letter.  Use "\textbackslash @.".}
+Light vector mesons ($\rho, \omega, \phi$) are  probes for investigating the mass moidification of hadrons within the QGP. These mesons decay into lepton pairs that do not interact strong interaction with the QGP, and their relatively short lifetimes make them likely to decay within the QGP at low transverse momentum. Consequently, measuring lepton pairs provides a means to observe the mass distributions of light vector mesons, modified by the QGP.
+However, despite efforts to explore the chiral symmetry restoration through various experiments, the phenomenon has yet to be clearly established due to challenges such as statistical limitations, resolution, and contributions from heavy flavors. To address these challenges, I aim to investigate the transverse momentum dependence of light vector meson mass distribution in Pb+Pb collisions by measuring muon pairs using ALCE. The ALICE detectors are specialized studying QGP.
+Using muon pairs has the advantage of providing a better S/N ratio compared to electron pairs, as it avoids background processes like $\pi^0$ Dalitz decays and $\gamma$ conversions. Additionally, a new silicon detector, the Muon Forward Tracker (MFT), was introduced in the forward region of ALICE during the LHC Run 3.
+\KS{Introduced NOT DURING the Run 3.}
+This detector enables precise measurements of muon production points and improves the detection of muons at lower transverse momentum. By accurately measuring muon production points, it becomes possible to exclude muons originating from heavy flavor decays, further enhancing mass resolution.
+\KS{HF muon rejection serves mostly for S/N, not mass resolutiuon.}
+This study aims to use the improved mass resolution and reduced background to explore the changes in light vector meson masses with minimal background at low transverse momentum by excluding heavy-flavor contributions and measuring muon pairs more precisely.
 
 For my master’s thesis, I analyzed forward muon pairs in pp collision events as a reference for mass distributions unaffected by QGP formation. The current quality of forward muon track reconstruction from pp collisions during LHC Run 3 remains suboptimal, as does the quality of muon pair analyses. In heavy-ion collisions, the challenge of muon track reconstruction is further exacerbated by the large number of particles generated per event compared to pp collisions. To improve the track quality of forward muons, including those detected with the MFT, I applied cuts on track matching between the MFT and the downstream detectors, removing incorrectly matched tracks. Additionally, I analyzed forward muon pairs, extracted the $\omega$ and $\phi$ meson peaks from their mass distributions, and calculated their yields. By separating the mass distribution into different transverse momentum bins, I computed the transverse momentum spectra of  $\omega$ and $\phi$ meson yields.
+\KS{I think you should add the outcome of your study at the end, not just listing what you did.}
