--- a/master_thesis.tex
+++ b/master_thesis.tex
@@ -13,6 +13,7 @@
 \usepackage{titlesec} % セクションのスタイル変更用（オプション）
 \usepackage{caption}
 
+\newcommand{\KS}[1]{\textcolor{red}{\textbf{#1}}}
 
 % ヘッダーの設定
 \pagestyle{fancy}
