/@ added where the sentance ends in captial letter or number

--- a/1_Introduction.tex
+++ b/1_Introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
     \subsection{QCD}
     \label{Intro:QCD}
-        The fundamental components of the matter around us are elementary particles. The behaviour of elementary particles, such as quarks and gluons, is described by quantum field theory. In particular, quarks and gluons possess degrees of freedom called "color," the physics governing this degree of freedom is known as Quantum Chromodynamics (QCD). QCD is based on an SU(3) gauge theory and describes the strong interaction. The QCD Lagrangian is expressed as follows:
+        The fundamental components of the matter around us are elementary particles. The behaviour of elementary particles, such as quarks and gluons, is described by quantum field theory. In particular, quarks and gluons possess degrees of freedom called "color," the physics governing this degree of freedom is known as Quantum Chromodynamics (QCD).\@ QCD is based on an SU(3) gauge theory and describes the strong interaction. The QCD Lagrangian is expressed as follows:
         \begin{eqnarray}
             \label{QCDlagrangian}
             \mathcal{L}_{QCD}=\sum_q \bar{\psi}_{q,a}\qty(i\gamma^\mu\partial_\mu-m_q)\psi_{q,a}+g_s \sum_q \bar{\psi}_{q,a}\gamma^\mu T^A_{ab}\psi_{q,b}G^A_\mu-\frac{1}{4}G^A_{\mu\nu}G^{A\mu\nu}
@@ -91,7 +91,7 @@
             \mathcal{L}=\bar{q}i\gamma \cdot \partial q -(-g)\qty[(\bar{q}q)^2+(\bar{q}i\gamma_5q)^2]
         \end{eqnarray}  
         where, $q$ and $\bar{q}$ represent quark and antiquark fields, respectively; $\gamma$ and $\gamma_5$ are gamma matrices, with $\gamma_5 = i \gamma_0 \gamma_1 \gamma_2 \gamma_3$. Since there is an attractive force between quarks and antiquarks, the coupling constant $g$ is positive and has a dimension of $[\text{mass}]^{-2}$.  
-        This model serves as a chiral effective theory for QCD at the energy scale of 1 GeV. To determine the ground state of this Lagrangian, the self-consistent mean field approximation (MFA) is employed:  
+        This model serves as a chiral effective theory for QCD at the energy scale of 1 GeV.\@ To determine the ground state of this Lagrangian, the self-consistent mean field approximation (MFA) is employed:  
         \begin{eqnarray}
             \label{sigma_ev}
             \ev{\bar{q}q}\equiv \frac{-m_0^2 \sigma}{G}\\
@@ -195,14 +195,14 @@
         
         % Some evidence of QGP includes jet quenching and strong elliptic flow. Jet quenching refers to the phenomenon where high-energy partons produced during the initial stage of high-energy collisions generate numerous high-momentum particles along their flight direction. However, due to their interactions with the QGP, the jets are quenched. High-energy partons passing through the medium lose energy, suppressing the jet phenomenon. Additionally, strong elliptic flow occurs when QGP generated during heavy-ion collisions exhibits a distinct collective flow depending on its density and temperature.
         
-        The QGP generated in heavy-ion collisions has its density and temperature determined by the collision energy. High-density QGP regions are realized at collision energies of $\sqrt{s_{NN}} \lesssim 10$ [GeV]. At these energies, the colliding particles stop at the collision point. They create a high-density state where kinetic energy is converted directly into heat, increasing the temperature.  
+        The QGP generated in heavy-ion collisions has its density and temperature determined by the collision energy. High-density QGP regions are realized at collision energies of $\sqrt{s_{NN}} \lesssim 10$ [GeV].\@ At these energies, the colliding particles stop at the collision point. They create a high-density state where kinetic energy is converted directly into heat, increasing the temperature.  
   
-        On the other hand, high-temperature, low-density regions are achieved at collision energies of $\sqrt{s_{NN}} \gtrsim 100$ [GeV]. In this energy regime, the colliding particles do not stop but pass through each other, producing a large number of pair creation. As a result, the baryon number density does not become large relative to the temperature. However, a high energy density region leads to the creation of high-temperature matter near the collision point.  
+        On the other hand, high-temperature, low-density regions are achieved at collision energies of $\sqrt{s_{NN}} \gtrsim 100$ [GeV].\@ In this energy regime, the colliding particles do not stop but pass through each other, producing a large number of pair creation. As a result, the baryon number density does not become large relative to the temperature. However, a high energy density region leads to the creation of high-temperature matter near the collision point.  
         
-        In the ALICE experiment, LHC Run 3 operations began in 2022, initiating Pb-Pb collision measurements at $\sqrt{s_{NN}} = 5.36$ TeV. This collision energy produces QGP in the ultrahigh temperature, low-density region. Moreover, compared to the QGP generated at $\sqrt{s_{NN}} = 200$ GeV at RHIC, the higher collision energy at LHC enables the measurement of a larger QGP than ever before.
+        In the ALICE experiment, LHC Run 3 operations began in 2022, initiating Pb-Pb collision measurements at $\sqrt{s_{NN}} = 5.36$ TeV.\@ This collision energy produces QGP in the ultrahigh temperature, low-density region. Moreover, compared to the QGP generated at $\sqrt{s_{NN}} = 200$ GeV at RHIC, the higher collision energy at LHC enables the measurement of a larger QGP than ever before.
 
     \subsection{Dilepton Measurement\cite{Geurts:2022xmk}}
-        Dilepton measurement is a good probe to investigate the time evolution of heavy-ion collisions. Leptons do not interact with strong interactions, making them less affected by the QGP. This characteristic allows for the measurement of a distribution that sums up dileptons from all stages of heavy-ion collisions. The sources of dilepton production are as follows:   
+        Dilepton measurement is a good probe to investigate the time evolution of heavy-ion collisions. Leptons do not interact with strong interactions, making them less affected by the QGP.\@ This characteristic allows for the measurement of a distribution that sums up dileptons from all stages of heavy-ion collisions. The sources of dilepton production are as follows:   
         
         \begin{figure}[hbtp]
             \centering
@@ -226,7 +226,7 @@
         
         In the High-Mass Region, primordial dileptons (Drell-Yan) constitute the continuum component of the mass distribution. It is related to the initial state of the collision. In the Intermediate-Mass Region, thermal dileptons originating from the QGP and continuum components such as open-charm and open-beauty are observed. 
         
-        Finally, in the Low-Mass Region, the dilepton distribution is predominantly derived from light meson decays from the hadronic gas. Most dileptons from hadron decays have longer lifetimes compared to the QGP. So these mesons observed in this region are mostly from the hadron gas. However, light vector mesons $(\rho, \omega, \phi)$ have extremely short lifetimes.　They may be affected by QGP.
+        Finally, in the Low-Mass Region, the dilepton distribution is predominantly derived from light meson decays from the hadronic gas. Most dileptons from hadron decays have longer lifetimes compared to the QGP.\@ So these mesons observed in this region are mostly from the hadron gas. However, light vector mesons $(\rho, \omega, \phi)$ have extremely short lifetimes.　They may be affected by QGP.\@
     \subsection{Search for chiral symmetry restoration in QGP}
         \begin{figure}[hbtp]
             \centering
@@ -235,13 +235,13 @@
             \label{Intro:Search_for_CSR:Low_mass_vector_meson_decay_in_QGP}
         \end{figure}
         
-        In the QGP, it is expected that an ultra-high temperature and high-density state is realized, leading to $ < \bar{q}q > \sim 0 $ and the restoration of chiral symmetry. Light vector mesons $(\rho, \omega, \phi)$ serve as probes for the masses of hadrons in the QGP. These particles have short lifetimes and decay channels into dileptons. As shown in Fig.4, their short lifetimes make it possible for them to decay within the QGP, which would otherwise immediately hadronize. Additionally, since they decay exclusively into dileptons, which do not undergo strong interactions with the QGP, the masses of hadrons within the QGP can be measured.  
+        In the QGP, it is expected that an ultra-high temperature and high-density state is realized, leading to $ < \bar{q}q > \sim 0 $ and the restoration of chiral symmetry. Light vector mesons $(\rho, \omega, \phi)$ serve as probes for the masses of hadrons in the QGP.\@ These particles have short lifetimes and decay channels into dileptons. As shown in Fig.4, their short lifetimes make it possible for them to decay within the QGP, which would otherwise immediately hadronize. Additionally, since they decay exclusively into dileptons, which do not undergo strong interactions with the QGP, the masses of hadrons within the QGP can be measured.  
         
         In past experiments, the restoration of chiral symmetry was investigated using dileptons. In the SPS-NA60 experiment, the excess of muon pairs in the low-mass region was reported. However, the excess could also be explained by $\pi + \pi \rightarrow \rho \rightarrow \pi \pi$, and thus it did not serve as definitive evidence of chiral symmetry restoration\cite{NA60}.  
         
         Additionally, in the electron pair measurements during ALICE Run 2 $\sqrt{s_{NN}} = 5.02$ TeV PbPb collisions, contributions from open-charm and open-beauty were estimated along with the vacuum dilepton distribution excluding $\rho$, and an excess of electron pairs was reported.the excess was explained as thermal dileptons from the QGP within the error range.demonstrated\cite{ALICE:2023jef}.  
         
-        This study aims to measure the mass modification of light vector mesons in the QGP using forward muon pairs in ALICE Run 3 $\sqrt{s_{NN}} = 5.36$ TeV PbPb collisions. Starting from ALICE Run 3, the MFT was introduced into the forward detector system of the ALICE experiment. It enables more precise measurements of muon production points compared to Run 2, as well as measurements of muons with lower transverse momentum. By utilizing the differences in muon production points of heavy flavor (HF), which is one of the backgrounds in light vector meson measurements, can be removed. This will allow the precise measurement of the mass distribution of low transverse momentum light vector mesons, which are more likely to decay within the QGP.
+        This study aims to measure the mass modification of light vector mesons in the QGP using forward muon pairs in ALICE Run 3 $\sqrt{s_{NN}} = 5.36$ TeV PbPb collisions. Starting from ALICE Run 3, the MFT was introduced into the forward detector system of the ALICE experiment. It enables more precise measurements of muon production points compared to Run 2, as well as measurements of muons with lower transverse momentum. By utilizing the differences in muon production points of heavy flavor (HF), which is one of the backgrounds in light vector meson measurements, can be removed. This will allow the precise measurement of the mass distribution of low transverse momentum light vector mesons, which are more likely to decay within the QGP.\@
     \subsection{Analysis of pp collision data as a baseline}
     This paper presents the analysis results of proton-proton collision events. The particles generated in proton-proton collisions are produced from the vacuum. Measurements of collision events where QGP is not produced serve as a baseline for comparison with events where QGP is generated. Currently, the quality of track reconstruction is still insufficient, and the muon pair analysis is also incomplete. Furthermore, the quality of muon tracks in heavy-ion collisions is more challenging than in proton-proton collisions due to the large number of particles generated in each event.  
 
