--- a/0_Abstract.tex
+++ b/0_Abstract.tex
@@ -1,9 +1,9 @@
 \section*{Abstract}
-The masses of hadrons can be theoretically explained by the spontaneous breaking of chiral symmetry. Experimentally, the quark-gluon plasma (QGP) produced in heavy-ion collisions is expected to create a medium characterized by extremely high temperatures and densities. In such a medium, the quark condensate, which serves as the order parameter of chiral symmetry, is predicted to approach zero. It may potentially lead to changes in the masses of hadrons within the QGP.
-\KS{You need a proper spacing after a sentence ending with a capital letter.  Use "\textbackslash @.".}
-Light vector mesons ($\rho, \omega, \phi$) are  probes for investigating the mass moidification of hadrons within the QGP. These mesons decay into lepton pairs that do not interact strong interaction with the QGP, and their relatively short lifetimes make them likely to decay within the QGP at low transverse momentum. Consequently, measuring lepton pairs provides a means to observe the mass distributions of light vector mesons, modified by the QGP.
-However, despite efforts to explore the chiral symmetry restoration through various experiments, the phenomenon has yet to be clearly established due to challenges such as statistical limitations, resolution, and contributions from heavy flavors. To address these challenges, I aim to investigate the transverse momentum dependence of light vector meson mass distribution in Pb+Pb collisions by measuring muon pairs using ALCE. The ALICE detectors are specialized studying QGP.
-Using muon pairs has the advantage of providing a better S/N ratio compared to electron pairs, as it avoids background processes like $\pi^0$ Dalitz decays and $\gamma$ conversions. Additionally, a new silicon detector, the Muon Forward Tracker (MFT), was introduced in the forward region of ALICE during the LHC Run 3.
+The masses of hadrons can be theoretically explained by the spontaneous breaking of chiral symmetry. Experimentally, the quark-gluon plasma (QGP) produced in heavy-ion collisions is expected to create a medium characterized by extremely high temperatures and densities. In such a medium, the quark condensate, which serves as the order parameter of chiral symmetry, is predicted to approach zero. It may potentially lead to changes in the masses of hadrons within the QGP.\@
+%\KS{You need a proper spacing after a sentence ending with a capital letter.  Use "\textbackslash @.".} <- modified
+Light vector mesons ($\rho, \omega, \phi$) are  probes for investigating the mass moidification of hadrons within the QGP.\@ These mesons decay into lepton pairs that do not interact strong interaction with the QGP, and their relatively short lifetimes make them likely to decay within the QGP at low transverse momentum. Consequently, measuring lepton pairs provides a means to observe the mass distributions of light vector mesons, modified by the QGP.\@
+However, despite efforts to explore the chiral symmetry restoration through various experiments, the phenomenon has yet to be clearly established due to challenges such as statistical limitations, resolution, and contributions from heavy flavors. To address these challenges, I aim to investigate the transverse momentum dependence of light vector meson mass distribution in Pb+Pb collisions by measuring muon pairs using ALCE.\@ The ALICE detectors are specialized studying QGP.\@
+Using muon pairs has the advantage of providing a better S/N ratio compared to electron pairs, as it avoids background processes like $\pi^0$ Dalitz decays and $\gamma$ conversions.\@ Additionally, a new silicon detector, the Muon Forward Tracker (MFT), was introduced in the forward region of ALICE during the LHC Run 3.
 \KS{Introduced NOT DURING the Run 3.}
 This detector enables precise measurements of muon production points and improves the detection of muons at lower transverse momentum. By accurately measuring muon production points, it becomes possible to exclude muons originating from heavy flavor decays, further enhancing mass resolution.
 \KS{HF muon rejection serves mostly for S/N, not mass resolutiuon.}
