--- a/0_Abstract.tex
+++ b/0_Abstract.tex
@@ -1,11 +1,15 @@
 \begin{abstract}
-    The masses of hadrons, which constitute matter, are theoretically explained to dynamically get their mass through the spontaneous chiral symmetry breaking. Hadrons are composed of quarks and gluons. Quarks and gluons obey quantum chromodynamics (QCD),which leads to confinement phenomena and spontaneous breaking of chiral symmetry. Then, when the quarks and gluons reaches an ultra-high temperature and ultra=dense state, they undergoes a phase transition from the hadron state to the quark-gluon plasma (QGP) state. In the QGP state, quarks deconfinement and it suggest the chiral symmetry restoration. The existence of the QGP has been confirmed by relativistic high-energy heavy-ion collision experiments. Chiral symmetry restoration phenomenon has been explored via dilepton measurement. However, chiral symmetry restoration in the QGP have not yet been clearly unreveal, as they can also be explained by other phenomena such as the broadening of $\rho$ mesons due to high-temperature hadron gas.\par
-    Therefore ,I aim to explore chiral symmetry restoration phenomena via dimuon using ALICE in LHC Run3, and by revealing the transverse momentum dependence of the light vector mesons invariant mass distribution change in PbPb collisions. The Large Hadron Collider(LHC) is the world's largest hadron collider, capable of colliding particles such as protons and leads at high energies. The ALICE experiment has a group of detectors dedicated to QGP research and high muon particle identification detectors in the forward region. The ALICE experiment has a suite of detectors dedicated to QGP research, in particular a high muon particle identification detector in the forward region. I use them to measure light vector mesons that decay into dimuon. The light vector mesons ($\rho,\omega,\phi$) are probes of hadronic masses inside the QGP due to having decay channels into only dimuons and short lifetime. Therefore, by measuring lepton pairs, it becomes possible to measure the invariant mass distribution of light vector mesons whose masses have been modified by the QGP.\@ The advantage of muon is that they do not include background events such as $\pi^0$ Dalitz decays and $\gamma$ conversion Therefore are a better S/N channel than electron pairs. Furthermore, a new silicon detector (MFT) has been introduced to the forward region in ALICE from LHC Run 3.\@ It enables accurate measurement of the muon production point and muon measurements with lower transverse momentum than Run2.\@ Accurate measurement of the muon production point enables removal of heavy flavour-derived muons using lifetime differences, and the accuracy of the pseudorapidity and azimuth angle measurement of muons improves the mass resolution of muon pairs.\par
-    This thesis presents the transverse momentum dependence of $\omega$ and $\phi$ mesons invariant mass using forward muon pairs in pp collisions at the LHC Run 3 ALICE experiment, as a step toward measuring the changes in the invariant mass distribution of light vector mesons induced by QGP formation. The dimuon invariant mass distribution was calculated using track reconstruction with a group of forward region detectors, including MFT.\@ A fit was performed on the $\omega$ and $\phi$ peak extracted from it and the yield was calculated. Along with this analysis, the matching $\chi^2$ between the MFT and its backward detector, the MCH track, was optimised. Concerning the matching of MFT and MCH tracks, a removal analysis of incorrectly matched tracks was also carried out. It is shown that a cut applied to the pseudorapidity difference between MFT and MCH tracks, formed using all forward detectors, can remove incorrectly matched tracks. After entering the PhD programme, I plan to analyse data from PbPb collisions and search for chiral symmetry restoration scenarios based on changes in the light vector mesons invariant mass distribution with and without QGP production.
+    The masses of hadrons are theoretically explained to dynamically get their mass through the spontaneous chiral symmetry breaking. Hadrons are composed of quarks and gluons. Quarks and gluons obey quantum chromodynamics (QCD),which leads to confinement phenomena and spontaneous chiral symmetry breaking. Then, when the quarks and gluons reaches an ultra-high temperature and dense state,they undergoes a phase transition from the hadron to the quark-gluon plasma(QGP) state. In the QGP state, quarks deconfinement and it suggest the chiral symmetry restoration. The existence of the QGP has been confirmed by heavy-ion collision. Chiral symmetry restoration phenomenon has been explored via dilepton measurement. However, its phenomena have not yet been clearly unreveal, as they can also be explained by other phenomena such as the broadening of $\rho$ mesons due to high-temperature hadron gas.
+    
+    Therefore, I aim to explore chiral symmetry restoration via dimuon using ALICE in LHC Run3, and by revealing the transverse momentum dependence of the light vector mesons invariant mass distribution change in PbPb collisions. The Large Hadron Collider(LHC) is the world's largest hadron collider. The ALICE experiment has detectors specialized to QGP research, and high muon particle identification detectors in the forward region.
+    %I use them to measure light vector mesons that decay into dimuon.
+    The light vector mesons ($\rho,\omega,\phi$) are probes of hadron's masses inside QGP due to decay into only dimuons and have short lifetime. 
+    %Therefore, by measuring dilepton, it is possible to measure the invariant mass distribution of light vector mesons whose masses have been modified by the QGP.\@ 
+    The advantage of using muons is that they don't include $\pi^0$ Dalitz decays and $\gamma$ conversion. Therefore it is a better S/N than dielectron measurement. Furthermore, a new silicon detector (MFT) has been installed to the forward region from LHC Run3.\@ It enables accurate measurement of the muon production point and lower transverse momentum than Run2.\@  As aa result, it enables removal of muons from heavy flavor using lifetime differences. Also the accuracy of the pseudorapidity and azimuth angle measurement of muons improves the mass resolution.
 
-   
+    This thesis shows the transverse momentum dependence of $\omega$ and $\phi$ mesons invariant mass using forward dimuons in $\sqrt{s}=13.6$ TeV $pp$ collisions with ALICE, as a step toward measuring the modified in the invariant mass distribution of light vector mesons induced by QGP. The dimuon invariant mass was calculated using track reconstruction with forward region detectors, including MFT.\@ A fit was performed on the $\omega$ and $\phi$ peak extracted from it and the yield was calculated. Along with this analysis, the matching $\chi^2$ between the MFT and its backward detector, the MCH track, was optimised. Concerning the matching of MFT and MCH tracks, a removal analysis of incorrectly matched tracks was also carried out. It is shown that a cut applied to the pseudorapidity difference between MFT and MCH tracks, formed using all forward detectors, can remove incorrectly matched tracks. 
+    %After entering the PhD programme, I plan to analyse data from PbPb collisions and search for chiral symmetry restoration scenarios based on changes in the light vector mesons invariant mass distribution with and without QGP production.
 \end{abstract}
-
 %Shigaki-san's comment(Log)
     %\KS{You need a proper spacing after a sentence ending with a capital letter.  Use "\textbackslash @.".} <- modified
     %\KS{Introduced NOT DURING the Run 3.} <- ... during the LHC Run3 -> from the LHC Run3
