--- a/3_Analysis.tex
+++ b/3_Analysis.tex
@@ -206,16 +206,18 @@
                     \begin{table}[htbp]
                         \centering
                         \caption{Fit Results}
-                        \begin{tabular}{|c||c|c|c|c|c|}
-                            \hline
-                            & $\omega$ mean mass & $\omega$ mass width & $\phi$ mean mass & $\phi$ mass width & fit $\chi^2$ \\ \hline \hline
-                            1 < $p_{T}$ < 2 &$0.771\pm0.002$& $0.024\pm0.002$ &$1.012\pm0.003$ &$0.027\pm 0.003$ & 52.34/32\\ \hline
-                            2 < $p_{T}$ < 3 &$0.775\pm0.001$&$0.026\pm0.001$ & $1.017\pm0.002$& $0.024\pm 0.002$ & 42.07/32\\ \hline
-                            3 < $p_{T}$ < 4 &$0.777\pm0.002$& $0.024\pm0.002$ &$1.018\pm0.002$ &$0.023\pm 0.001$ & 111.8/32\\ \hline
-                            4 < $p_{T}$ < 5 &$0.788\pm0.002$& $0.022\pm0.002$ &$1.02\pm0.00$ &$0.018\pm 0.002$ & 43.33/32\\ \hline
-                            5 < $p_{T}$ < 6 &$0.787\pm0.003$& $0.016\pm0.002$ &$1.02\pm0.00$ &$0.022\pm 0.004$ & 39.88/31\\ \hline
-                            6 < $p_{T}$ < 10 &$0.785\pm0.004$& $0.021\pm0.005$ &$1.011\pm0.009$ &$0.029\pm 0.007$ & 29.13/27\\ \hline
-                        \end{tabular}
+                        \resizebox{\textwidth}{!}{
+                            \begin{tabular}{|c||c|c|c|c|c|}
+                                \hline
+                                & $\omega$ mean mass & $\omega$ mass width & $\phi$ mean mass & $\phi$ mass width & fit $\chi^2$ \\ \hline \hline
+                                1 < $p_{T}$ < 2 &$0.771\pm0.002$& $0.024\pm0.002$ &$1.012\pm0.003$ &$0.027\pm 0.003$ & 52.34/32\\ \hline
+                                2 < $p_{T}$ < 3 &$0.775\pm0.001$&$0.026\pm0.001$ & $1.017\pm0.002$& $0.024\pm 0.002$ & 42.07/32\\ \hline
+                                3 < $p_{T}$ < 4 &$0.777\pm0.002$& $0.024\pm0.002$ &$1.018\pm0.002$ &$0.023\pm 0.001$ & 111.8/32\\ \hline
+                                4 < $p_{T}$ < 5 &$0.788\pm0.002$& $0.022\pm0.002$ &$1.02\pm0.00$ &$0.018\pm 0.002$ & 43.33/32\\ \hline
+                                5 < $p_{T}$ < 6 &$0.787\pm0.003$& $0.016\pm0.002$ &$1.02\pm0.00$ &$0.022\pm 0.004$ & 39.88/31\\ \hline
+                                6 < $p_{T}$ < 10 &$0.785\pm0.004$& $0.021\pm0.005$ &$1.011\pm0.009$ &$0.029\pm 0.007$ & 29.13/27\\ \hline
+                            \end{tabular}
+                        }
                         \label{Analysis:Dimuon:Yield:Fit_Results}
                     \end{table}
                     \subsubsection{Yield calculation of $\omega,\phi$} 
@@ -348,25 +350,26 @@
                 \begin{figure}[htbp]
                     \centering
                     % Left figure
-                    \begin{minipage}{0.3\textwidth} % Specify width with minipage
+                    \begin{minipage}{0.45\textwidth} % Specify width with minipage
                         \centering
                         \includegraphics[width=\textwidth]{fig/3_3_pt_resolution.pdf} % Left image
                         \caption{MFT-MCH-MID Track cutted $\eta$}
                         \label{Analysis:Matching:pt resolution}
                     \end{minipage}
                     % Right figure
-                    \begin{minipage}{0.3\textwidth}
+                    \begin{minipage}{0.45\textwidth}
                         \centering
                         \includegraphics[width=\textwidth]{fig/3_3_eta_resolution.pdf} % Right image
                         \caption{MFT-MCH-MID Track cutted $p_T$}
                         \label{Analysis:Matching:eta resolution}
                     \end{minipage}
-                    \begin{minipage}{0.3\textwidth}
-                        \centering
-                        \includegraphics[width=\textwidth]{fig/3_3_phi_resolution.pdf} % Right image
-                        \caption{MFT-MCH-MID Track cutted $p_T$}
-                        \label{Analysis:Matching:phi resolution}
-                    \end{minipage}
+                \end{figure}
+
+                \begin{figure}[htbp]
+                    \centering
+                    \includegraphics[width=0.45\textwidth]{fig/3_3_phi_resolution.pdf} % Right image
+                    \caption{MFT-MCH-MID Track cutted $p_T$}
+                    \label{Analysis:Matching:phi resolution}
                 \end{figure}
                 The horizontal axis shows the difference between the reconstructed values and the true values, divided by the true values, while the vertical axis represents the number of occurrences. The black histogram represents the resolution without applying the $\Delta \eta$ cut, and the red histogram represents the tracks after applying the $\Delta \eta < 0.2$ cut. By comparing the black and red histograms, we can see that all distributions show improved resolution for single muons.% Furthermore, efficiency and matching purity are provided below.
                 % \begin{figure}[htbp]
